--- a/.github/workflows/publishing-back-end.yml
+++ b/.github/workflows/publishing-back-end.yml
@@ -50,7 +50,7 @@ jobs:
   publish_to_ecs:
     name: Publicação no ECS
     runs-on: ubuntu-latest
-    needs: push_to_ecr
+    needs: build
     steps:
       - name: Configurando as credenciais na AWS
         uses: aws-actions/configure-aws-credentials@v1
