--- a/.github/workflows/publishing-to-ecs.yml
+++ b/.github/workflows/publishing-to-ecs.yml
@@ -84,7 +84,7 @@ jobs:
   publish_to_ecs:
     name: Distribuindo aplicação no ECS
     runs-on: ubuntu-latest
-    needs: build
+    needs: push_to_ecr
     steps:
       - name: Configurando as credenciais na AWS
         uses: aws-actions/configure-aws-credentials@v1
