--- a/.github/workflows/publishing-to-github-packages.yml
+++ b/.github/workflows/publishing-to-github-packages.yml
@@ -22,8 +22,8 @@ on:
 jobs:
   build:
     name: Compilando pacote ${{ inputs.PROJECT_NAME }}
-    runs-on: ubuntu-latest
-    #runs-on: self-hosted
+    #runs-on: ubuntu-latest
+    runs-on: self-hosted
     defaults:
       run:
         working-directory: ${{ inputs.WORKING_DIRECTORY }}
