--- a/.github/workflows/publishing-front-end20x.yml
+++ b/.github/workflows/publishing-front-end20x.yml
@@ -46,7 +46,7 @@ jobs:
           cache: 'npm'
           cache-dependency-path: ${{ inputs.WORKING_DIRECTORY }}/package-lock.json
       - run: npm ci -f
-      - run: npm run build --if-present
+      # - run: npm run build --if-present
 
       - name: Compilação do projeto
         run: ${{ inputs.COMMAND_BUILD }}
