--- a/.github/workflows/publishing-to-node-packages.yml
+++ b/.github/workflows/publishing-to-node-packages.yml
@@ -32,7 +32,7 @@ jobs:
           registry-url: 'https://npm.pkg.github.com'
           # Defaults to the user or organization that owns the workflow file
           scope: '@keevosoftwares'
-      - run: npm i
+      - run: npm i -f
       - run: npm ci
       - run: npm publish
         env:
