--- a/.github/workflows/publishing-to-node-packages.yml
+++ b/.github/workflows/publishing-to-node-packages.yml
@@ -24,16 +24,29 @@ jobs:
       run:
         working-directory: ${{ inputs.WORKING_DIRECTORY }}
 
+    # steps:
+    #   - uses: actions/checkout@v4
+    #   - uses: actions/setup-node@v4
+    #     with:
+    #       node-version: ${{ secrets.NODE_VERSION }}
+    #       registry-url: 'https://npm.pkg.github.com'
+    #       # Defaults to the user or organization that owns the workflow file
+    #       scope: '@keevosoftwares'
+    #   - run: npm i
+    #   - run: npm ci
+    #   - run: npm publish
+    #     env:
+    #       NODE_AUTH_TOKEN: ${{ secrets.GIT_TOKEN }}
+
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
           node-version: ${{ secrets.NODE_VERSION }}
-          registry-url: 'https://npm.pkg.github.com'
-          # Defaults to the user or organization that owns the workflow file
-          scope: '@keevosoftwares'
       - run: npm i
       - run: npm ci
-      - run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.GIT_TOKEN }}
+      - uses: JS-DevTools/npm-publish@v3
+        with:
+          token: ${{ secrets.GIT_TOKEN }}
+          registry: "https://npm.pkg.github.com"
+          package: ${{ inputs.WORKING_DIRECTORY }}
