--- a/.github/workflows/publishing-to-github-packages.yml
+++ b/.github/workflows/publishing-to-github-packages.yml
@@ -1,4 +1,4 @@
-name: Publicação de pacotes
+name: Publicação de pacotes .NET
 
 on:
   workflow_call:
@@ -23,17 +23,17 @@ jobs:
   build:
     name: Compilando pacote ${{ inputs.PROJECT_NAME }}
     runs-on: ubuntu-latest
-    #runs-on: self-hosted
     defaults:
       run:
         working-directory: ${{ inputs.WORKING_DIRECTORY }}
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Setando versão do .NET
-        uses: actions/setup-dotnet@v3
+        uses: actions/setup-dotnet@v4
         with:
           dotnet-version: ${{ secrets.DOTNET_VERSION }}
+
       - name: Restaurando dependências
         run: dotnet restore /p:Configuration="Release"
 
@@ -49,7 +49,7 @@ jobs:
           package-type: nuget
           #min-versions-to-keep: 3 #Será utilizado quando estivermos versionando os componentes por sprint
 
-      - name: Enviando projeto para o Nuget
+      - name: Publicando pacote
         run: |
           cd out
           dotnet nuget push **/*.nupkg --api-key ${{ secrets.GIT_TOKEN }} --source ${{ secrets.NUGET_SOURCE }} --skip-duplicate
