--- a/.github/workflows/publishing-to-node-packages.yml
+++ b/.github/workflows/publishing-to-node-packages.yml
@@ -45,12 +45,12 @@ jobs:
       - name: Compilando projeto
         run: ${{ inputs.RUN_COMMAND }}
 
-      # - name: Exclusão do pacote no nuget
-      #   uses: actions/delete-package-versions@v4
-      #   with:
-      #     package-name: ${{ inputs.PROJECT_NAME }}
-      #     token: ${{ secrets.GIT_TOKEN }}
-      #     package-type: npm
+      - name: Exclusão do pacote no nuget
+        uses: actions/delete-package-versions@v4
+        with:
+          package-name: ${{ inputs.PROJECT_NAME }}
+          token: ${{ secrets.GIT_TOKEN }}
+          package-type: npm
 
       - name: Publicando pacote
         run: |
