--- a/.github/workflows/publishing-to-github-packages.yml
+++ b/.github/workflows/publishing-to-github-packages.yml
@@ -23,6 +23,7 @@ jobs:
   build:
     name: Compilando pacote ${{ inputs.PROJECT_NAME }}
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     defaults:
       run:
         working-directory: ${{ inputs.WORKING_DIRECTORY }}
