--- a/.github/workflows/publishing-front-end20x.yml
+++ b/.github/workflows/publishing-front-end20x.yml
@@ -32,6 +32,7 @@ jobs:
   build:
     name: Processo de deploy do frontend
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     defaults:
         run:
           working-directory: ${{ inputs.WORKING_DIRECTORY }}
