--- a/.github/workflows/publishing-to-ecs.yml
+++ b/.github/workflows/publishing-to-ecs.yml
@@ -36,6 +36,7 @@ jobs:
   build:
     name: Compilando projeto
     runs-on: ubuntu-latest
+    timeout-minutes: 30
 
     steps:
     - uses: actions/checkout@v3
