--- a/.github/workflows/publishing-lambda-function.yml
+++ b/.github/workflows/publishing-lambda-function.yml
@@ -27,6 +27,7 @@ jobs:
   deploy:
     name: Deploy Lambda
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     
     steps:
       - name: Checkout repository
