--- a/.github/workflows/publishing-to-ecr.yml
+++ b/.github/workflows/publishing-to-ecr.yml
@@ -63,11 +63,11 @@ jobs:
         id: date
         run: echo "::set-output name=date::$(date +'%Y%m%d%H%M%S')"
 
-      - name: Criando backup da imagem atual
-        run: |
-          docker pull ${{ secrets.ECR_IMAGE }}
-          docker image tag ${{ secrets.ECR_IMAGE }} ${{ secrets.ECR_IMAGE }}_${{ steps.date.outputs.date }}
-          docker push ${{ secrets.ECR_IMAGE }}_${{ steps.date.outputs.date }}
+      # - name: Criando backup da imagem atual
+      #   run: |
+      #     docker pull ${{ secrets.ECR_IMAGE }}
+      #     docker image tag ${{ secrets.ECR_IMAGE }} ${{ secrets.ECR_IMAGE }}_${{ steps.date.outputs.date }}
+      #     docker push ${{ secrets.ECR_IMAGE }}_${{ steps.date.outputs.date }}
 
       - name: Preparando e enviando imagem para o Amazon ECR
         run: |
